--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/shopify-buy": "^2.10.10",
     "dompurify": "^2.3.8",
+    "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.26.1",
     "postcss": "^8.4.13",
